Avoid overlapping

--- a/src/woocommerce/notice/store-notice/style.css
+++ b/src/woocommerce/notice/store-notice/style.css
@@ -4,6 +4,7 @@
 	background-color: var(--alert-info);
 	color: var(--general-background);
 	padding: 14px 20px 14px 44px;
+	z-index: 20;
 
 	&::before {
 		@mixin icon "\eda7";
